fixed misalignment with mobile nav burger

--- a/assets/scss/components/_global.scss
+++ b/assets/scss/components/_global.scss
@@ -21,19 +21,6 @@ html {
    -moz-osx-font-smoothing: grayscale;
 }
 
-// Dark/Light Mode Inversion
-.light {
-   --body-bg: var(--gradient-9);
-}
-
-.light,
-.light img,
-.light picture,
-.light video,
-.light canvas {
-   filter: invert(100%) hue-rotate(180deg);
-}
-
 html,
 img,
 picture,
