--- a/assets/scss/views/_home.scss
+++ b/assets/scss/views/_home.scss
@@ -1,43 +1,8 @@
 #home {
-  .kg-header-card {
-    background-color: _slayley(4);
-    background-blend-mode: hard-light;
-    background-position: 50% 50%;
-    &-header {
-      text-shadow: var(--ggs-text-3D);
-    }
-    &-subheader {
-      color: _slayley(4);
-    }
-  }
-  .kg-image-card {
-    @apply relative w-1/3 max-w-xl aspect-square overflow-hidden mx-12 my-0 float-left;
-    border-radius: var(--radius-blob-4);
-    > a {
-      > .kg-image {
-        @apply relative w-full h-full object-cover;
-      }
-    }
-  }
-}
-
-#home {
   .xc-page__content {
     > p {
       line-height: $phi;
       margin-bottom: $space-phi;
-    }
-
-    .social-feeds {
-      @apply flex flex-col lg:flex-row items-center;
-      gap: $spacing-unit;
-      padding: $space-phi 0 $space-pi;
-      .instagram-info {
-        flex: 0 1 60%;
-      }
-      .instagram-feed {
-        flex: 1 0 40%;
-      }
     }
   }
 }
